# KQN_Bot

./: README.md
KQN_Bot/: README.md  bot.py  meal.txt  pyproject.toml  test.py
KQN_Bot/src/plugins/: eat_dinner.py  weather.py
go-cqhttp/: config.yml  device.json  session.token
go-cqhttp/data/: image.db  video.db
go-cqhttp/data/leveldb-v2/: 000978.ldb  001250.ldb  001251.ldb  001252.ldb  001253.ldb  001254.ldb  001255.ldb  001256.ldb  001257.ldb  001258.ldb  001260.ldb  LOG  MANIFEST-001062
go-cqhttp/dumps/: 1670441251.dump  1672420307.dump  1672560468.dump  1672927133.dump  1672962604.dump  1674020121.dump  1674839885.dump  1674955652.dump  1675075704.dump  1675333639.dump  1675333756.dump  1675336289.dump  1675592099.dump  1675612089.dump  1675612802.dump  1675613273.dump  1675615610.dump
