[project]
name = "KQN_Bot"
version = "0.1.0"
description = "KQN_Bot"
readme = "README.md"
requires-python = ">=3.8, <4.0"

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" },
    { name = "Telegram", module_name = "nonebot.adapters.telegram" },
    { name = "BilibiliLive", module_name = "nonebot.adapter.bilibili" }
]
plugins = []
plugin_dirs = ["src/plugins"]
builtin_plugins = ["echo"]
